Added Date Picker

--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List App</title>
+    <link rel="stylesheet" href="https://unpkg.com/js-datepicker/dist/datepicker.min.css">
+    
 </head>
 <body>
-    
+    <h1>To Do List</h1>
+
+    <label>Enter Task</label>
+    <input type="text" id="info">
+    <br>
+
+    <label>Do Before </label>
+    <input type="text" id="due-date">
+    <br>
+
+    <input type="checkbox" id="complete">
+    <label> Complete</label>
+    <br>
+
+    <input type="button" id="add=item"></input>
+
+    <script src="https://unpkg.com/js-datepicker"></script>
+    <script>
+        const picker = datepicker("#due-date");
+        picker.setMin(new Date());
+    </script>
 </body>
 </html>
