Began most functions and started validation

--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
     <h1>To Do List</h1>
 
     <label>Enter Task</label>
-    <input type="text" id="info">
+    <input type="text" id="task">
+    <span>*</span>
     <br>
 
     <label>Do Before </label>
     <input type="text" id="due-date">
+    <span>*</span>
     <br>
 
     <input type="checkbox" id="complete">
     <label> Complete</label>
     <br>
 
-    <input type="button" id="add=item"></input>
+    <input type="button" id="add-item"></input>
+
+    <div id="to-do">
+
+    </div>
 
     <script src="https://unpkg.com/js-datepicker"></script>
     <script>
