--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div id="complete-items">
-        <h1>Completed Items</h1>
+        <h1>Completed</h1>
     </div>
 
     <script src="https://unpkg.com/js-datepicker"></script>
