--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     </div>
 
     <script src="https://unpkg.com/js-datepicker"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
